--- a/indigo_iam/templates/indigo-iam.list.erb
+++ b/indigo_iam/templates/indigo-iam.list.erb
@@ -1,1 +1,1 @@
-deb http://cloud-vm195.cloud.cnaf.infn.it/repo/indigo-iam/<%= @iam_repo_branch %>/xenial amd64/
+deb https://repo.cloud.cnaf.infn.it/repository/indigo-iam/<%= @iam_repo_branch %>/xenial amd64/
