--- a/indigo_iam/templates/indigo-iam.repo.erb
+++ b/indigo_iam/templates/indigo-iam.repo.erb
@@ -1,8 +1,8 @@
-[indigo-iam]
-name=indigo-iam
-baseurl=http://cloud-vm195.cloud.cnaf.infn.it/repo/indigo-iam/<%= @iam_repo_branch %>/el7/RPMS/
+[indigo-iam-<%= @iam_repo_branch %>]
+name=indigo-iam-<%= @iam_repo_branch %>
+baseurl=https://repo.cloud.cnaf.infn.it/repository/indigo-iam/<%= @iam_repo_branch %>/el7/RPMS/
 protect=1
 enabled=1
 priority=1
 gpgcheck=0
-sslverify=0
+sslverify=1
